# EnvironmentalControllerKata

./: README.md
cpp/: CMakeLists.txt  README.md
cpp/code/: CMakeLists.txt  EnvironmentController.cpp  EnvironmentController.h  Hardware.h
cpp/tests/: ApprovalsExampleTest.EnvironmentController_with_Approvals.Turn_on_HiTempAlarm_at_threshold.approved.txt  ApprovalsExampleTest.EnvironmentController_with_Approvals.Turn_on_LoTempalarm_at_threshold.approved.txt  ApprovalsExampleTest.EnvironmentController_with_Approvals.Turn_on_cooler_and_blower_if_hot.approved.txt  ApprovalsExampleTest.EnvironmentController_with_Approvals.Turn_on_heater_and_blower_if_cold.approved.txt  ApprovalsExampleTest.cpp  BobsDSLExampleTest.cpp  CMakeLists.txt  HardwareStub.cpp  HardwareStub.h  PlainCatch2ExampleTest.cpp
cpp/visual-studio-2017/: EnvironmentController.vcxproj
java/: pom.xml
java/src/main/java/codingdojo/: EnvironmentController.java  Hardware.java
java/src/test/java/codingdojo/: ApprovalsExample.java  ApprovalsExample.turnOnCoolerAndBlowerIfHot.approved.txt  ApprovalsExample.turnOnHeaterAndBlowerIfCold.approved.txt  ApprovalsExample.turnOnHiTempAlarmAtThreshold.approved.txt  ApprovalsExample.turnOnLoTempAlarmAtThreshold.approved.txt  BobsDSLExample.java  HardwareStub.java  PlainJUnitExample.java
